--- a/app/src/main/res/xml/schedule_widget_info.xml
+++ b/app/src/main/res/xml/schedule_widget_info.xml
@@ -6,6 +6,6 @@
     android:targetCellHeight="2"
     android:updatePeriodMillis="1800000"
     android:description="@string/widget_description"
-    android:previewImage="@mipmap/ic_launcher"
+    android:previewLayout="@layout/widget_preview"
     android:resizeMode="horizontal|vertical"
     android:widgetCategory="home_screen" />
