--- a/app/src/main/res/xml/schedule_widget_info.xml
+++ b/app/src/main/res/xml/schedule_widget_info.xml
@@ -4,7 +4,7 @@
     android:minHeight="120dp"
     android:targetCellWidth="3"
     android:targetCellHeight="2"
-    android:updatePeriodMillis="1800000"
+    android:updatePeriodMillis="0"
     android:description="@string/widget_description"
     android:previewLayout="@layout/widget_preview"
     android:resizeMode="horizontal|vertical"
